--- a/index.html
+++ b/index.html
@@ -90,18 +90,13 @@
                     Oi. Meu nome é Bruno.
                 </p>
 
-                <p>
-                    Bem-vindos ao meu portfólio, e nesta parte, vou contar um pouquinho sobre mim. :)
-                </p>
-
                 <p>Gosto de fazer um pouco de tudo: desenvolver interfaces, tentar fazer alguns desenhos com HTML e
                     CSS, jogar alguns jogos, como RuneScape
                     (que aliás, meu nick é este <a href="https://runepixels.com/players/yotyan/skills"
                         target="_blank">aqui</a>), ler, tirar algumas fotos etc etc.</p>
                 <p>
                     Estou me embarcando para o desenvolvimento Front-End.
-                    Estou aprendendo HTML, CSS, JavaScript, Bulma CSS, Bootstrap; e alguns frameworks como React,
-                    Angular.
+                    Estou aprendendo HTML, CSS, JavaScript, Bulma CSS, Bootstrap; e alguns frameworks como React.
                 </p>
 
             </div>
