--- a/index.html
+++ b/index.html
@@ -117,6 +117,16 @@
         </div>
     </div>
 
+    <div id="experiences">
+        <div class="container">
+            <div class="elements">
+                <div class="title">
+                    <h2>Experiências</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
