PORT 2022.06.25 >> criando seções projeto e rodapé

--- a/index.html
+++ b/index.html
@@ -125,6 +125,18 @@
         </div>
     </div>
 
+    <div id="projects">
+        <div class="elements">
+            <div class="title">
+                <h2>Projetos</h2>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        
+    </footer>
+
 </body>
 
 </html>
