--- a/index.html
+++ b/index.html
@@ -17,13 +17,48 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 </head>
 
 <body>
 
-    
+    <header>
+        <div class="container">
+            <div class="title">
+                <a href="#">
+                    <p>&lsaquo;BS/&rsaquo;</p>
+                </a>
+            </div>
+            <div class="burger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">Sobre Mim</a></li>
+                    <li><a href="">Habilidades</a></li>
+                    <li><a href="">Experiências</a></li>
+                    <li><a href="">Projetos</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
+    <div id="banner">
+        <div class="container">
+            <div class="lottie">
+                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_w51pcehl.json"
+                    background="transparent" speed="1" loop autoplay>
+                </lottie-player>
+            </div>
+            <div class="texts">
+                <h1>Bruno Sohara</h1>
+                <h2>Desenvolvedor Front-end</h2>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
