PORT 2022.06.26 > teste em mobile

--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
 
     <div id="banner">
         <div class="container">
-            <div class="lottie">
-                <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_w51pcehl.json"
-                    background="transparent" speed="1" loop autoplay>
-                </lottie-player>
-            </div>
-            <div class="texts">
-                <h1>Bruno Sohara</h1>
-                <h2>Desenvolvedor Front-end</h2>
+            <div class="elements">
+                <div class="lottie">
+                    <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_w51pcehl.json"
+                        background="transparent" speed="1" loop autoplay>
+                    </lottie-player>
+                </div>
+                <div class="texts">
+                    <h1>Bruno Sohara</h1>
+                    <h2>Desenvolvedor Front-end</h2>
+                </div>
             </div>
         </div>
     </div>
