--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
 
@@ -55,12 +57,18 @@
                     </lottie-player>
                 </div>
                 <div class="texts">
-                    <h1>Bruno Sohara</h1>
-                    <h2>Desenvolvedor Front-end</h2>
+                    <h1 data-aos="fade-up" data-aos-duration="800" data-aos-once="true">Bruno Sohara</h1>
+                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true">Desenvolvedor Front-end</h2>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
