PORT 2022.06.27 > criando página 'sobre mim'

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bruno Sohara :: Front-End Developer</title>
+    <title>Sobre Mim :: Bruno Sohara</title>
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +21,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
 </head>
 
 <body>
@@ -28,7 +28,7 @@
     <header>
         <div class="container">
             <div class="title">
-                <a href="#">
+                <a href="/index.html">
                     <p>&lsaquo;BS/&rsaquo;</p>
                 </a>
             </div>
@@ -48,31 +48,47 @@
         </div>
     </header>
 
-    <div id="banner">
+    <div id="aboutMe">
         <div class="container">
             <div class="elements">
-                <div class="lottie">
-                    <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_w51pcehl.json"
-                        background="transparent" speed="1" loop autoplay>
-                    </lottie-player>
+                <div class="profImg">
+                    <img src="../img/1563820244433.jpg" alt="Perfil Bruno Sohara">
                 </div>
-                <div class="texts">
-                    <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">Bruno Sohara</h1>
-                    <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true">Desenvolvedor Front-end</h2>
-                    <button>
-                        <a href="./pages/aboutMe.html">
-                            <p>Sobre Mim</p>
-                        </a>
-                    </button>
+                <div class="profItems">
+                    <div class="title">
+                        <h1>Sobre Mim</h1>
+                    </div>
+                    <div class="smBtn">
+                        <button>
+                            <a href="">
+                                <i class="fa-brands fa-github"></i>
+                                <p>Github</p>
+                            </a>
+                        </button>
+                        <button>
+                            <a href="">
+                                <i class="fa-brands fa-linkedin"></i>
+                                <p>LinkedIn</p>
+                            </a>
+                        </button>
+                    </div>
+                    <div class="descr">
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum officia, aspernatur iusto,
+                        sequi sint repudiandae enim quidem quis modi assumenda ducimus! Quia itaque voluptatibus aliquid
+                        placeat quaerat odio rem fuga!
+                        </p>
+                        <p>
+                            Nostrum fugit perspiciatis animi eaque laboriosam ab repellendus id adipisci corrupti. Rem
+                        quibusdam quis nam illo asperiores aut est cumque voluptate dicta eveniet, deleniti, officiis
+                        ut? Nisi atque fugiat vitae.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
