PORT 2022.06.27 > pagina nova 'sobre mim'

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -48,24 +48,25 @@
         </div>
     </header>
 
-    <div id="aboutMe">
+    <section id="aboutMe">
         <div class="container">
             <div class="elements">
                 <div class="profImg">
-                    <img src="../img/1563820244433.jpg" alt="Perfil Bruno Sohara">
+                    <img src="../img/1563820244433.jpg" alt="">
                 </div>
+
                 <div class="profItems">
                     <div class="title">
                         <h1>Sobre Mim</h1>
                     </div>
                     <div class="smBtn">
-                        <button>
+                        <button id="github">
                             <a href="">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
                         </button>
-                        <button>
+                        <button id="linkedin">
                             <a href="">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <p>LinkedIn</p>
@@ -74,20 +75,23 @@
                     </div>
                     <div class="descr">
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum officia, aspernatur iusto,
-                        sequi sint repudiandae enim quidem quis modi assumenda ducimus! Quia itaque voluptatibus aliquid
-                        placeat quaerat odio rem fuga!
+                            Oi. Meu nome é Bruno. Sou Desenvolvedor Front-End em busca de uma nova oportunidade para a
+                            área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
                         </p>
                         <p>
-                            Nostrum fugit perspiciatis animi eaque laboriosam ab repellendus id adipisci corrupti. Rem
-                        quibusdam quis nam illo asperiores aut est cumque voluptate dicta eveniet, deleniti, officiis
-                        ut? Nisi atque fugiat vitae.
+                            Detentor de duas cidadanias: Brasileira / Japonesa. Em busca de uma oportunidade na Europa,
+                            na América do Norte, ou no Continente Asiático, principalmente no Japão.
+                        </p>
+                        <p>
+                            Trabalhei com diversas tecnologias, assim como Salesforce, utilizando linguagens próprias
+                            como Apex e Lightning Web Components, para desenvovlvimento back-end e front-end,
+                            respectivamente.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
 </body>
 
