PORT 2022.06.27 > pagina nova 'sobre mim'

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -28,7 +28,7 @@
     <header>
         <div class="container">
             <div class="title">
-                <a href="/index.html">
+                <a href="../index.html">
                     <p>&lsaquo;BS/&rsaquo;</p>
                 </a>
             </div>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="descr">
                         <p>
-                            Oi. Meu nome é Bruno. Sou Desenvolvedor Front-End em busca de uma nova oportunidade para a
+                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade para a
                             área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
                         </p>
                         <p>
