PORT 2022.06.27 > testes e correções em mobile

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -60,13 +60,13 @@
                         <h1>Sobre Mim</h1>
                     </div>
                     <div class="smBtn">
-                        <button id="github">
+                        <button id="github" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
                             <a href="">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
                         </button>
-                        <button id="linkedin">
+                        <button id="linkedin" data-aos="fade-out" data-aos-duration="2000" data-aos-once="true">
                             <a href="">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <p>LinkedIn</p>
@@ -74,24 +74,41 @@
                         </button>
                     </div>
                     <div class="descr">
-                        <p>
-                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade para a
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade
+                            para a
                             área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
                         </p>
-                        <p>
-                            Detentor de duas cidadanias: Brasileira / Japonesa. Em busca de uma oportunidade na Europa,
+                        <p data-aos="fade-left" data-aos-duration="1200" data-aos-once="true">
+                            Sou detentor de duas cidadanias: Brasileira / Japonesa. Em busca de uma oportunidade na
+                            Europa,
                             na América do Norte, ou no Continente Asiático, principalmente no Japão.
                         </p>
-                        <p>
+                        <p data-aos="fade-left" data-aos-duration="1400" data-aos-once="true">
                             Trabalhei com diversas tecnologias, assim como Salesforce, utilizando linguagens próprias
                             como Apex e Lightning Web Components, para desenvovlvimento back-end e front-end,
                             respectivamente.
+                        </p>
+                        <p data-aos="fade-left" data-aos-duration="1600" data-aos-once="true">
+                            Trabalhei com várias linguagens, com C#, VueJS, entre outros. No entanto,
+                            todas as experiências que pude vivenciar, mexi com algumas linguagens específicas, tais
+                            como: HTML, CSS que são linguagens de marcação e estilização. O que me deespertou interesse
+                            em desenvolver estas linguagens. Além do JavaScript, e alguns frameworks como Bootstrap,
+                            Bulma CSS e outros.
+                        </p>
+                        <p data-aos="fade-left" data-aos-duration="1800" data-aos-once="true">
+                            Estou em busca de uuma nova experiência, como Desenvolvedor Front-End. Para quaisquer
+                            dúvidas, contatem em meu LinkedIn.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
