PORT 2022.06.27 > testes e correções em mobile 2

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -97,7 +97,7 @@
                             Bulma CSS e outros.
                         </p>
                         <p data-aos="fade-left" data-aos-duration="1800" data-aos-once="true">
-                            Estou em busca de uuma nova experiência, como Desenvolvedor Front-End. Para quaisquer
+                            Estou em busca de uma nova experiência, como Desenvolvedor Front-End. Para quaisquer
                             dúvidas, contatem em meu LinkedIn.
                         </p>
                     </div>
