PORT 2022.06.27 > testes e correções em mobile 3 + inserção de blank em link buttons

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -61,13 +61,13 @@
                     </div>
                     <div class="smBtn">
                         <button id="github" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
-                            <a href="https://github.com/brunosoharagit">
+                            <a href="https://github.com/brunosoharagit" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
                         </button>
                         <button id="linkedin" data-aos="fade-out" data-aos-duration="2000" data-aos-once="true">
-                            <a href="https://www.linkedin.com/in/bruno-sohara-474770186/">
+                            <a href="https://www.linkedin.com/in/bruno-sohara-474770186/" target="_blank">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <p>LinkedIn</p>
                             </a>
