--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre Mim :: Bruno Sohara</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,8 +38,8 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="./pages/aboutMe.html">Sobre Mim</a></li>
-                    <li><a href="#skills">Habilidades</a></li>
+                    <li><a href="#">Sobre Mim</a></li>
+                    <li><a href="./skills.html">Habilidades</a></li>
                     <li><a href="#exp">Experiências</a></li>
                     <li><a href="#proj">Projetos</a></li>
                 </ul>
@@ -51,22 +50,22 @@
     <section id="aboutMe">
         <div class="container">
             <div class="elements">
-                <div class="profImg">
+                <div class="profImg" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
                     <img src="../img/1563820244433.jpg" alt="">
                 </div>
 
                 <div class="profItems">
-                    <div class="title">
+                    <div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
                         <h1>Sobre Mim</h1>
                     </div>
                     <div class="smBtn">
-                        <button id="github" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
+                        <button id="github" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
                             <a href="https://github.com/brunosoharagit" target="_blank">
                                 <i class="fa-brands fa-github"></i>
                                 <p>Github</p>
                             </a>
                         </button>
-                        <button id="linkedin" data-aos="fade-out" data-aos-duration="2000" data-aos-once="true">
+                        <button id="linkedin" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
                             <a href="https://www.linkedin.com/in/bruno-sohara-474770186/" target="_blank">
                                 <i class="fa-brands fa-linkedin"></i>
                                 <p>LinkedIn</p>
