PORT 2022.06.27 >  criando a seção de habilidades

--- a/pages/skills.html
+++ b/pages/skills.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,6 +21,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 </head>
+
 <body>
 
     <header>
@@ -36,7 +38,6 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="./aboutMe.html">Sobre Mim</a></li>
                     <li><a href="#">Habilidades</a></li>
                     <li><a href="#exp">Experiências</a></li>
                     <li><a href="#proj">Projetos</a></li>
@@ -44,6 +45,13 @@
             </div>
         </div>
     </header>
+
     
+
+    <script>
+        AOS.init();
+    </script>
+
 </body>
+
 </html>
