--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="./pages/aboutMe.html">Sobre Mim</a></li>
                     <li><a href="#skills">Habilidades</a></li>
                     <li><a href="#exp">Experiências</a></li>
                     <li><a href="#proj">Projetos</a></li>
@@ -60,7 +59,7 @@
                     <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">Bruno Sohara</h1>
                     <h2 data-aos="fade-up" data-aos-duration="1200" data-aos-once="true">Desenvolvedor Front-end</h2>
                     <button>
-                        <a href="./pages/aboutMe.html">
+                        <a href="#aboutMe">
                             <p>Sobre Mim</p>
                         </a>
                     </button>
@@ -69,6 +68,214 @@
         </div>
     </div>
 
+    <section id="aboutMe">
+        <div class="container">
+            <div class="elements">
+                <div class="profImg" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
+                    <img src="../img/1563820244433.jpg" alt="">
+                </div>
+
+                <div class="profItems">
+                    <div class="title" data-aos="fade-out" data-aos-duration="1000" data-aos-once="true">
+                        <h1>Sobre Mim</h1>
+                    </div>
+                    <div class="smBtn">
+                        <button id="github" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
+                            <a href="https://github.com/brunosoharagit" target="_blank">
+                                <i class="fa-brands fa-github"></i>
+                                <p>Github</p>
+                            </a>
+                        </button>
+                        <button id="linkedin" data-aos="fade-out" data-aos-duration="1500" data-aos-once="true">
+                            <a href="https://www.linkedin.com/in/bruno-sohara-474770186/" target="_blank">
+                                <i class="fa-brands fa-linkedin"></i>
+                                <p>LinkedIn</p>
+                            </a>
+                        </button>
+                    </div>
+                    <div class="descr">
+                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                            Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade
+                            para a
+                            área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
+                        </p>
+                        <p data-aos="fade-left" data-aos-duration="1400" data-aos-once="true">
+                            Trabalhei com diversas tecnologias, assim como Salesforce, utilizando linguagens próprias
+                            como Apex e Lightning Web Components, para desenvovlvimento back-end e front-end,
+                            respectivamente.
+                        </p>
+                        <p data-aos="fade-left" data-aos-duration="1600" data-aos-once="true">
+                            Trabalhei com várias linguagens, com C#, VueJS, entre outros. No entanto,
+                            todas as experiências que pude vivenciar, mexi com algumas linguagens específicas, tais
+                            como: HTML, CSS que são linguagens de marcação e estilização. O que me deespertou interesse
+                            em desenvolver estas linguagens. Além do JavaScript, e alguns frameworks como Bootstrap,
+                            Bulma CSS e outros.
+                        </p>
+                        <p data-aos="fade-left" data-aos-duration="1800" data-aos-once="true">
+                            Estou em busca de uma nova experiência, como Desenvolvedor Front-End. Para quaisquer
+                            dúvidas, contatem em meu LinkedIn.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills">
+        <div class="container">
+            <div class="elements">
+                <div class="title">
+                    <h1>Habilidades</h1>
+                </div>
+                <div class="card-list">
+                    <div class="card" data-aos="flip-left" data-aos-duration="750" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="900" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-css3-plain-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                            <div class="bar success"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1050" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-javascript-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1200" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-git-plain-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1350" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-bootstrap-plain-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-bulma-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1650" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-react-original-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar warning"></div>
+                            <div class="bar warning"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1800" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-jest-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar danger"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="1950" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-typescript-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar danger"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="2100" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-nodejs-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar danger"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="2250" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-mongodb-plain colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar danger"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="flip-left" data-aos-duration="2400" data-aos-once="true">
+                        <div class="card-head">
+                            <i class="devicon-sequelize-plain-wordmark colored"></i>
+                        </div>
+                        <div class="card-body">
+                            <div class="bar danger"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                            <div class="bar undone"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script>
         AOS.init();
