--- a/index.html
+++ b/index.html
@@ -94,24 +94,24 @@
                         </button>
                     </div>
                     <div class="descr">
-                        <p data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                        <p data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">
                             Oi. Meu nome é Bruno. <br> Sou Desenvolvedor Front-End em busca de uma nova oportunidade
                             para a
                             área. Gosto de jogos, fotografia e outros passatempos que tenho interesse.
                         </p>
-                        <p data-aos="fade-left" data-aos-duration="1400" data-aos-once="true">
+                        <p data-aos="fade-up" data-aos-duration="1400" data-aos-once="true">
                             Trabalhei com diversas tecnologias, assim como Salesforce, utilizando linguagens próprias
                             como Apex e Lightning Web Components, para desenvovlvimento back-end e front-end,
                             respectivamente.
                         </p>
-                        <p data-aos="fade-left" data-aos-duration="1600" data-aos-once="true">
+                        <p data-aos="fade-up" data-aos-duration="1600" data-aos-once="true">
                             Trabalhei com várias linguagens, com C#, VueJS, entre outros. No entanto,
                             todas as experiências que pude vivenciar, mexi com algumas linguagens específicas, tais
                             como: HTML, CSS que são linguagens de marcação e estilização. O que me deespertou interesse
                             em desenvolver estas linguagens. Além do JavaScript, e alguns frameworks como Bootstrap,
                             Bulma CSS e outros.
                         </p>
-                        <p data-aos="fade-left" data-aos-duration="1800" data-aos-once="true">
+                        <p data-aos="fade-up" data-aos-duration="1800" data-aos-once="true">
                             Estou em busca de uma nova experiência, como Desenvolvedor Front-End. Para quaisquer
                             dúvidas, contatem em meu LinkedIn.
                         </p>
