--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="elements">
                 <div class="profImg" data-aos="flip-left" data-aos-duration="1500" data-aos-once="true">
-                    <img src="../img/1563820244433.jpg" alt="">
+                    <img src="../img/1563820244433.jpg" alt="Bruno Sohara">
                 </div>
 
                 <div class="profItems">
