PORT 2022.06.28 > criando a seção experiências

--- a/pages/myXp.html
+++ b/pages/myXp.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hablidade :: Bruno Sohara</title>
+    <title>Minhas Experiências :: Bruno Sohara</title>
+
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,38 +20,38 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-</head>
 
+</head>
 <body>
 
     <header>
-        <div class="container">
-            <div class="title">
-                <a href="../index.html">
-                    <p>&lsaquo;BS/&rsaquo;</p>
-                </a>
+        <div class="nav">
+            <input type="checkbox" id="nav-check">
+            <div class="nav-header">
+                <div class="nav-title">
+                    <a href="#" class="return" style="text-decoration: none">
+                        &lsaquo;BS/&rsaquo;
+                    </a>
+                </div>
             </div>
-            <div class="burger">
-                <div class="bar"></div>
-                <div class="bar"></div>
-                <div class="bar"></div>
+            <div class="nav-btn">
+                <label for="nav-check">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
             </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="#">Habilidades</a></li>
-                    <li><a href="#exp">Experiências</a></li>
-                    <li><a href="#proj">Projetos</a></li>
-                </ul>
+
+            <div class="nav-links">
+                <a href="#aboutMe">Sobre Mim</a>
+                <a href="#skills">Habilidades</a>
+                <a href="#">Experiências</a>
+                <a href="#">Projetos</a>
             </div>
         </div>
     </header>
 
     
-
-    <script>
-        AOS.init();
-    </script>
-
+    
 </body>
-
 </html>
