OBC 2022.06.29 >> criando e editando seção de eperiências profissionais

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="nav-links">
                 <a href="#aboutMe">Sobre Mim</a>
                 <a href="#skills">Habilidades</a>
-                <a href="#">Experiências</a>
+                <a href="#myXp">Experiências</a>
                 <a href="#">Projetos</a>
             </div>
         </div>
@@ -278,6 +278,64 @@
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
                             <div class="bar undone"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="myXp">
+        <div class="container">
+            <div class="elements">
+                <div class="xp-title">
+                    <i class="fa-solid fa-briefcase"></i>
+                    <h1>Experiências</h1>
+                </div>
+
+                <div class="xp-lists">
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i>
+                            <h2>Sottelli | Especialistas em Salesforce</h2>
+                        </div>
+                        <div class="card-time">
+                            <i class="fa-solid fa-calendar"></i>
+                            <h3>OUT/2021 ~ JUN/2022</h3>
+                        </div>
+                        <div class="card-descr">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i>
+                            <h2>Marry Perry Paris</h2>
+                        </div>
+                        <div class="card-time">
+                            <i class="fa-solid fa-calendar"></i>
+                            <h3>ABR/2021 ~ JUL/2021</h3>
+                        </div>
+                        <div class="card-descr">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
                         </div>
                     </div>
                 </div>
