--- a/pages/myXp.html
+++ b/pages/myXp.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +23,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
+
 <body>
 
     <header>
@@ -51,7 +53,67 @@
         </div>
     </header>
 
-    
-    
+    <section id="myXp">
+        <div class="container">
+            <div class="elements">
+                <div class="xp-title">
+                    <i class="fa-solid fa-briefcase"></i>
+                    <h1>Experiências</h1>
+                </div>
+
+                <div class="xp-lists">
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i>
+                            <h2>Sottelli | Especialistas em Salesforce</h2>
+                        </div>
+                        <div class="card-time">
+                            <i class="fa-solid fa-calendar"></i>
+                            <h3>OUT/2021 ~ JUN/2022</h3>
+                        </div>
+                        <div class="card-descr">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="xp-card" data-aos="zoom-in" data-aos-once="true" data-aos-duration="1000">
+                        <div class="card-title">
+                            <i class="fa-solid fa-building"></i>
+                            <h2>Marry Perry Paris</h2>
+                        </div>
+                        <div class="card-time">
+                            <i class="fa-solid fa-calendar"></i>
+                            <h3>ABR/2021 ~ JUL/2021</h3>
+                        </div>
+                        <div class="card-descr">
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
+                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
+                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script>
+        AOS.init();
+    </script>
 </body>
+
 </html>
