--- a/pages/tests.html
+++ b/pages/tests.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="projCards">
-                    <div class="card">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
                                 <img src="../img/Screenshot_2.png" alt="">
@@ -82,10 +82,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
-                                <img src="../img/Screenshot_3.png" alt="">
+                                <img src="../img/Screenshot_3.png" alt="" data-aos-duration="1000">
                             </div>
                             <div class="card-body">
                                 <h3>Portfólio</h3>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1200" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
                                 <img src="../img/Screenshot_4.png" alt="">
@@ -111,7 +111,7 @@
                                 <p>Utilização do Javascript</p>
                             </div>
                             <div class="card-footer">
-                                <a href="#" class="button">Ver repositório</a>
+                                <a href="" class="button">Ver repositório</a>
                                 <a href="#" class="button">Em breve no Github Pages.</a>
                             </div>
                         </div>
