--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="#aboutMe">Sobre Mim</a>
                 <a href="#skills">Habilidades</a>
                 <a href="#myXp">Experiências</a>
-                <a href="#">Projetos</a>
+                <a href="#projects">Projetos</a>
             </div>
         </div>
     </header>
@@ -336,6 +336,73 @@
                                 qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
                                 Tenetur sit fugit quam. Exercitationem, cum quia.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects">
+        <div class="container">
+            <div class="elements">
+                <div class="title">
+                    <h1>Projetos</h1>
+                </div>
+                <div class="descr">
+                    <p>Projetos que foram realizados e/ou em andamento.</p>
+                </div>
+
+                <div class="projCards">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800" data-aos-delay="500">
+                        <div class="card-content">
+                            <div class="card-head">
+                                <img src="../img/Screenshot_2.png" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h3>Página para o Firefox</h3>
+                                <p>Página customizada para o navegador Firefox. Exemplo dos conceitos das linguagens de
+                                    marcação e estilização.</p>
+                                <p>Utilização do HTML e CSS.</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button">Ver repositório</a>
+                                <a href="" class="button">Em breve no Github Pages</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
+                        <div class="card-content">
+                            <div class="card-head">
+                                <img src="../img/Screenshot_3.png" alt="" data-aos-duration="1000">
+                            </div>
+                            <div class="card-body">
+                                <h3>Portfólio</h3>
+                                <p>Página criada e destinada para referência de projetos. Consiste em visualizar
+                                    informações sobre mim, habilidades, experiências profissionais e projetos realizados
+                                    de forma acadêmica e profissional.</p>
+                                <p>Utilização do HTML, CSS e Javascript.</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://github.com/brunosoharagit/page" class="button">Ver repositório</a>
+                                <a href="#" class="button">É o que você está vendo agora. :)</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1200" data-aos-delay="500">
+                        <div class="card-content">
+                            <div class="card-head">
+                                <img src="../img/Screenshot_4.png" alt="">
+                            </div>
+                            <div class="card-body">
+                                <h3>Jogo da Cobra</h3>
+                                <p>Recriação do jogo de celular mais famnoso dos anos 2000.</p>
+                                <p>Utilização do Javascript</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="https://github.com/brunosoharagit/jogo-cobrinha" class="button">Ver repositório</a>
+                                <a href="" class="button">Em breve no Github Pages.</a>
+                            </div>
                         </div>
                     </div>
                 </div>
