PORT 2022.07.07 > alterações path de imagens

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
-                                <img src="../img/Screenshot_2.png" alt="">
+                                <img src="./img/Screenshot_2.png" alt="">
                             </div>
                             <div class="card-body">
                                 <h3>Página para o Firefox</h3>
@@ -374,7 +374,7 @@
                     <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
-                                <img src="../img/Screenshot_3.png" alt="" data-aos-duration="1000">
+                                <img src="./img/Screenshot_3.png" alt="" data-aos-duration="1000">
                             </div>
                             <div class="card-body">
                                 <h3>Portfólio</h3>
@@ -392,7 +392,7 @@
                     <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1200" data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
-                                <img src="../img/Screenshot_4.png" alt="">
+                                <img src="./img/Screenshot_4.png" alt="">
                             </div>
                             <div class="card-body">
                                 <h3>Jogo da Cobra</h3>
