PORT 2022.07.07 > alterações botões projeto target -> _blank

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                                 <p>Utilização do HTML e CSS.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button" target="_blank">Ver repositório</a>
                                 <a href="" class="button">Em breve no Github Pages</a>
                             </div>
                         </div>
@@ -384,7 +384,7 @@
                                 <p>Utilização do HTML, CSS e Javascript.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/page" class="button">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/page" class="button" target="_blank">Ver repositório</a>
                                 <a href="#" class="button">É o que você está vendo agora. :)</a>
                             </div>
                         </div>
@@ -400,7 +400,7 @@
                                 <p>Utilização do Javascript</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/jogo-cobrinha" class="button">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/jogo-cobrinha" class="button" target="_blank">Ver repositório</a>
                                 <a href="" class="button">Em breve no Github Pages.</a>
                             </div>
                         </div>
