PORT 2022.07.07 > alterações ortográgicas

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                             </div>
                             <div class="card-body">
                                 <h3>Jogo da Cobra</h3>
-                                <p>Recriação do jogo de celular mais famnoso dos anos 2000.</p>
+                                <p>Recriação do jogo de celular mais famoso dos anos 2000.</p>
                                 <p>Utilização do Javascript</p>
                             </div>
                             <div class="card-footer">
