PORT 2022.07.07 > inserindo rodapé portfólio

--- a/index.html
+++ b/index.html
@@ -354,7 +354,8 @@
                 </div>
 
                 <div class="projCards">
-                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800" data-aos-delay="500">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="800"
+                        data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
                                 <img src="./img/Screenshot_2.png" alt="">
@@ -366,12 +367,14 @@
                                 <p>Utilização do HTML e CSS.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button" target="_blank">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/Firefox_homepage" class="button"
+                                    target="_blank">Ver repositório</a>
                                 <a href="" class="button">Em breve no Github Pages</a>
                             </div>
                         </div>
                     </div>
-                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000" data-aos-delay="500">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000"
+                        data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
                                 <img src="./img/Screenshot_3.png" alt="" data-aos-duration="1000">
@@ -384,12 +387,14 @@
                                 <p>Utilização do HTML, CSS e Javascript.</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/page" class="button" target="_blank">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/page" class="button" target="_blank">Ver
+                                    repositório</a>
                                 <a href="#" class="button">É o que você está vendo agora. :)</a>
                             </div>
                         </div>
                     </div>
-                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1200" data-aos-delay="500">
+                    <div class="card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1200"
+                        data-aos-delay="500">
                         <div class="card-content">
                             <div class="card-head">
                                 <img src="./img/Screenshot_4.png" alt="">
@@ -400,7 +405,8 @@
                                 <p>Utilização do Javascript</p>
                             </div>
                             <div class="card-footer">
-                                <a href="https://github.com/brunosoharagit/jogo-cobrinha" class="button" target="_blank">Ver repositório</a>
+                                <a href="https://github.com/brunosoharagit/jogo-cobrinha" class="button"
+                                    target="_blank">Ver repositório</a>
                                 <a href="" class="button">Em breve no Github Pages.</a>
                             </div>
                         </div>
@@ -409,6 +415,27 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="items">
+                <div class="content">
+                    <h3>Contato</h3>
+                    <div class="mail">
+                        <i class="fa-solid fa-envelope"></i>
+                        <i>brunosoharadev@gmail.com</i>
+                    </div>
+                    <div class="whatsapp">
+                        <i class="fa-brands fa-whatsapp"></i>
+                        <i>(19) 98328-5815</i>
+                    </div>
+                </div>
+                <div class="copyright">
+                    Desenvolvido por Bruno Sohara :)
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script>
         AOS.init();
