PORT 2022.07.15: alterações de alinhamento :: rodapé(footer)

--- a/index.html
+++ b/index.html
@@ -305,14 +305,13 @@
                         </div>
                         <div class="card-descr">
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
-                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
-                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                                - Utilização da plataforma CRM Salesforce;
                             </p>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
-                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
-                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                                - Desenvolvimento de sistemas, a partir da utilização do Apex e do Lightning Web Components, utilização do <em>back-end</em> e do <em>front-end</em>, respectivamente;
+                            </p>
+                            <p>
+                                - Desenvolvimento <em>low-code</em>: regras de validação, configurações de permissão de grupos e perfis;
                             </p>
                         </div>
                     </div>
@@ -327,14 +326,10 @@
                         </div>
                         <div class="card-descr">
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
-                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
-                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                                - Manutenção do portal da empresa, com a utilização do HTML5 e CSS3;
                             </p>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae ullam exercitationem sit
-                                qui. Explicabo neque ratione molestias, quo nihil deserunt facere repellat asperiores?
-                                Tenetur sit fugit quam. Exercitationem, cum quia.
+                                - Desenvolvimento do portal de buscas de emprego, com utilização mínima do React;
                             </p>
                         </div>
                     </div>
@@ -417,7 +412,6 @@
     </section>
 
     <footer>
-        <div class="container">
             <div class="items">
                 <div class="content">
                     <h3>Contato</h3>
@@ -434,7 +428,6 @@
                     Desenvolvido por Bruno Sohara :)
                 </div>
             </div>
-        </div>
     </footer>
 
     <script>
