--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/actions.js"></script>
-
+    <link rel="shortcut icon" href="./img/favicon/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
